Added tests, list of tasks

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "optimist": "*"
   },
   "devDependencies": {
-    "nodeunit": "*"
+    "nodeunit": "*",
+    "semicov": "*"
   },
   "optionalDependencies": {}
 }
