--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Anatoliy Chakkaev <rpm1602 at gmail dot com>",
+  "author": "Anatoliy Chakkaev <mail at anatoliy dot in>",
   "name": "roco",
   "description": "Deploy app to remote server via ssh",
   "version": "0.0.7",
