--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "node": ">= 0.4.0"
   },
   "dependencies": {
+    "chalk": "~0.4.0",
     "coffee-script": "*",
-    "optimist": "*"
+    "event-stream": "~3.1.5",
+    "optimist": "*",
+    "vow": "~0.4.3",
+    "vow-fs": "~0.3.1"
   },
   "devDependencies": {
     "nodeunit": "*",
